How easy was it to find this information outside of a normal workflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
+.card {
+  font-size: 1.5rem;
+  color: blue;
+}
+
 body {
   font-size: 1.5rem;
+  color: red;
 }
 
 /*# sourceMappingURL=main.css.map */
